# samowl

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  hotspots.json  package.xml  requirements.txt  run_e2e_test.sh  run_validation.sh
config/: samowl.yaml
data/: resnet18_image_encoder.engine
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: build_owl_engine.py  debug_frame_capture.py  nav_mission_node.py  object_registry_node.py  samowl_daemon.py  samowl_pipeline.py  scene_graph.py  scene_graph_node.py  scene_query_cli.py  scene_query_node.py
src/: samowl.cpp
